# State_Diff

./: README.md  pyproject.toml  snr_forecast.py
SavedModels/2dsinDependent/0.0_10kBigBlockss5/: best_checkpoint.ckpt  config.yaml  hparams.yaml  metrics.csv
SavedModels/2dsinDependent/0.0_10kBigHiddens5/: config.yaml  (+2 more)
configs/: 1sin.yaml  2dsindependent.yaml  2dsinindependent.yaml  3dsinindependent.yaml  BiSin.yaml  LogisticMap.yaml  Lorenz.yaml  RandomWalk.yaml  hurricane.yaml  massSpringChain.yaml
sin/0.0_10ks4sin/: config.yaml  hparams.yaml  metrics.csv
sin/0.0_10kunetsin/: config.yaml  hparams.yaml
sin/0.0_5ks4sin/: best_checkpoint.ckpt  config.yaml
sin/0.1_10ks4sin/: config.yaml  metrics.csv
sin/0.1_10kunetsin/: config.yaml  metrics.csv
sin/0.1_5ks4sin/: best_checkpoint.ckpt
sin/0.2_10ks4sin/: metrics.csv
sin/0.2_5ks4sin/: metrics.csv
sin_dual/0.0_10ks4BiSin/: config.yaml  metrics.csv
sin_dual/0.0_10kunetBiSin/: hparams.yaml  metrics.csv
sin_dual/0.0_20ks4BiSin/: config.yaml
sin_dual/0.0_5ks4BiSin/: best_checkpoint.ckpt
sin_dual/0.1_10ks4BiSin/: config.yaml
sin_dual/0.1_10kunetBiSin/: metrics.csv
sin_dual/0.1_20ks4Bisin/: best_checkpoint.ckpt  config.yaml  hparams.yaml
sin_dual/0.1_5ks4BiSin/: metrics.csv
sin_dual/0.2_10ks4BiSin/: best_checkpoint.ckpt  config.yaml
sin_dual/0.2_10kunetBiSIn/: metrics.csv
sin_dual/0.2_20ks4BiSin/: best_checkpoint.ckpt  config.yaml
sin_dual/0.2_5ks4BiSin/: best_checkpoint.ckpt  config.yaml  metrics.csv
src/: dataGeneration.py  dataRetrieve.py
src/sfdiff/: configs.py  dataset.py  utils.py
(+215 files in other folders)
